alignment and styles corrections

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body {
 
 @layer utilities {
   .c-space {
-    @apply sm:px-10 px-5;
+    @apply sm:px-5 px-4;
   }
 
   .head-text {
